# RBAC-Chatbot

./: .env.example  .gitignore  Justfile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  eval-gate.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: rbac.py  router.py  schemas.py  service.py
backend/app/chat/: router.py  schemas.py  service.py
backend/app/guardrails/: __init__.py  injection.py  input_guard.py  output_guard.py  pii.py  scope.py
backend/app/health/: router.py
backend/app/memory/: __init__.py  models.py  session.py
backend/app/observability/: logging_config.py
backend/app/rag/: bm25_embedder.py  cost_metrics.py  embedder.py  llm_factory.py  pipeline.py  query_intent.py  query_transforms.py  reranker.py  retriever.py  rewriter.py  structured_retriever.py
backend/app/rag/prompts/: prompt_loader.py  system_prompt_v1.txt
backend/app/rate_limit/: __init__.py  limiter.py
backend/ingest/: embedder.py  ingest.py  qdrant_store.py
backend/ingest/chunkers/: csv_chunker.py  markdown_chunker.py  metadata.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_login.py  test_chat_memory_rate_limit.py  test_guardrail_integration.py  test_ingest.py  test_rag_pipeline.py  test_rbac_boundary.py
backend/tests/unit/: test_auth_service.py  test_bm25_embedder.py  test_chat_service_logging.py  test_config.py  test_cost_metrics.py  test_csv_chunker.py  test_ingest_embedder.py  test_injection_guard.py  test_llm_factory.py  test_logging_config.py  test_markdown_chunker.py  test_metadata.py  test_output_guard.py  test_pii_input_guard.py  test_pipeline_observability.py  test_query_intent.py  test_rate_limiter.py  test_rbac.py  test_reranker.py  test_retriever.py  test_run_ragas.py  test_scope_guard.py  test_session_memory.py  test_structured_retriever.py
data/eval/: golden_dataset.json
docs/: requirements.md
docs/plan/: implementation_plan.md  jira_backlog.md
evals/: generate_answers.py  guardrail_tests.py  rbac_boundary_tests.py  run_ragas.py  utils.py
frontend/: Dockerfile  package.json  tailwind.config.ts
infra/: amplify.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
(+34 files in other folders)
