[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingest"]

[project]
name = "finsolve-chatbot"
version = "0.1.0"
description = "FinSolve Internal AI Assistant — Enterprise RAG Chatbot with RBAC"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # Config
    "pydantic-settings>=2.2",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # LangChain & LLM
    "langchain>=0.3",
    "langchain-groq>=0.1",
    "langchain-community>=0.3",
    "langchain-huggingface>=0.0.3",
    # Vector DB
    "qdrant-client>=1.9",
    # Embeddings
    "sentence-transformers>=2.7",
    # Session / Rate limiting
    "redis>=5.0",
    # PII Guardrails
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    # Observability
    "langsmith>=0.1",
    "python-json-logger>=2.0",
    # Document loading
    "langchain-text-splitters>=0.3",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # FastAPI TestClient
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "fakeredis>=2.23",      # in-process Redis for unit tests (RC-103, RC-107)
]
evals = [
    "ragas>=0.1",
    "datasets>=2.19",
]

[dependency-groups]
dev = [
    "fakeredis>=2.34.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

# ---------------------------------------------------------------------------
# Force CPU-only PyTorch on all platforms.
# The default PyPI wheel bundles CUDA DLLs (~114 MB on Windows) that Windows
# Defender scans on every import, causing 60-120 s hangs.  The CPU wheel from
# PyTorch's own index has no CUDA DLLs and imports in < 5 s.
# ---------------------------------------------------------------------------
[tool.uv]
preview = true
torch-backend = "cpu"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
